<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <TextView
            android:id="@+id/textview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/receipt_date"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/textview_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/store_name"/>
    </RelativeLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/items_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isScrollContainer="true"
                        android:text="@string/items"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:layout_marginLeft="40dp"/>

        </ScrollView>


</LinearLayout>